<resources>
    <string name="app_name">CS220_Activity1_SignUp</string>

    <string name="err_valid_email">Please enter a valid email.</string>
    <string name="err_required_fields">All fields are required!</string>
    <string name="err_pass_match">Passwords do not match!</string>
    <string name="err_pass_invalid">Password must at least have 8 characters, one digit, one uppercase, and one symbol.</string>
    <string name="err_pass_empty">Please fill in this field.</string>
    <string name="err_gender_sel">Please select your gender.</string>
    <string name="err_invalid_input">Invalid input! Please try again.</string>
    <string name="err_username_missing">User not found! Please try creating an account.</string>
    <string name="err_incorrect_pass">Incorrect password! Please try again.</string>
    <string name="err_username_found">Username is already used! Please try another one.</string>

    <string name="new_acc_created">Account created successfully!</string>
    <string name="login_success">Logged in successfully!</string>

    <string name="sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="login">Already have an account? <u>Login</u></string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_gallery2">GalleryActivity_2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>