<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity2.LoginActivity">

    <TextView
        android:id="@+id/tvLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="35sp"
        android:textColor="#02182b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLbl" />

    <TextView
        android:id="@+id/tvErrUsername"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="13sp"
        android:text="@string/err_username_missing"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrUsername" />

    <CheckBox
        android:id="@+id/cbPass"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:button="@drawable/pass_view"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvErrPassword"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="13sp"
        android:text="@string/err_incorrect_pass"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/arc2"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintVertical_bias="0.300" />

    <TextView
        android:id="@+id/tvSignUpPage"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textColor="@color/arc3"
        android:textSize="13sp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>