<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="35sp"
        android:textColor="#02182b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLbl" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <TextView
        android:id="@+id/tvErrEmail"
        android:layout_width="255dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="13sp"
        android:text="@string/err_valid_email"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrEmail">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="Male"
            app:buttonTint="@drawable/radio_tint" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="Female"
            app:buttonTint="@drawable/radio_tint"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Other"
            app:buttonTint="@drawable/radio_tint"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etBirthdate"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Birthday (dd/MM/yyyy)"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthdate" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <CheckBox
        android:id="@+id/cbPass"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:button="@drawable/pass_view"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintTop_toTopOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvErrPass"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="13sp"
        android:text="@string/err_pass_invalid"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etCPass"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrPass" />

    <TextView
        android:id="@+id/tvErrPassMatch"
        android:layout_width="255dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:textSize="13sp"
        android:visibility="gone"
        android:text="@string/err_pass_empty"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="@+id/etCPass"
        app:layout_constraintTop_toBottomOf="@+id/etCPass" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/arc2"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrPassMatch" />

</androidx.constraintlayout.widget.ConstraintLayout>